force-app/main/default/objects/RealEstate__c/RealEstate__c.object-meta.xml
<CustomObject>
    <label>物件</label>
    <nameField>
        <label>物件名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>