force-app/main/default/objects/RealEstate__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>企業名</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>物件 (取引先)</relationshipLabel>
    <relationshipName>RealEstate_Account</relationshipName>
    <type>Lookup</type>
</CustomField>