force-app/main/default/objects/RealEstate__c/fields/Amortisation__c.field-meta.xml
<CustomField>
    <fullName>Amortisation__c</fullName>
    <label>（不要）敷引</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>