force-app/main/default/objects/RealEstate__c/fields/ArchitectureMonth__c.field-meta.xml
<CustomField>
    <fullName>ArchitectureMonth__c</fullName>
    <label>建築月</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>