force-app/main/default/objects/RealEstate__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>面積（㎡）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>