force-app/main/default/objects/RealEstate__c/fields/BalconyArea__c.field-meta.xml
<CustomField>
    <fullName>BalconyArea__c</fullName>
    <label>ベランダ面積</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>