force-app/main/default/objects/RealEstate__c/fields/BankAccountGuidancePetIncrease__c.field-meta.xml
<CustomField>
    <fullName>BankAccountGuidancePetIncrease__c</fullName>
    <label>口座案内：ペット増額</label>
    <length>255</length>
    <type>Text</type>
</CustomField>