force-app/main/default/objects/RealEstate__c/fields/BillingThisMonthCommonCharge__c.field-meta.xml
<CustomField>
    <fullName>BillingThisMonthCommonCharge__c</fullName>
    <label>請求当月共益費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>