force-app/main/default/objects/RealEstate__c/fields/BrrowerCancelNoticeNum__c.field-meta.xml
<CustomField>
    <fullName>BrrowerCancelNoticeNum__c</fullName>
    <label>借主解約予告</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>