force-app/main/default/objects/RealEstate__c/fields/BuildingMethod__c.field-meta.xml
<CustomField>
    <fullName>BuildingMethod__c</fullName>
    <label>建て方</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>木造</fullName>
            </value>
            <value>
                <fullName>鉄骨造</fullName>
            </value>
            <value>
                <fullName>鉄筋コンクリート造</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>