force-app/main/default/objects/RealEstate__c/fields/BuildingMonth__c.field-meta.xml
<CustomField>
    <fullName>BuildingMonth__c</fullName>
    <label>築月（月）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>