force-app/main/default/objects/RealEstate__c/fields/CancelContactFax__c.field-meta.xml
<CustomField>
    <fullName>CancelContactFax__c</fullName>
    <label>解約連絡先FAX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>