force-app/main/default/objects/RealEstate__c/fields/CancelContactName__c.field-meta.xml
<CustomField>
    <fullName>CancelContactName__c</fullName>
    <label>解約連絡先名称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>