force-app/main/default/objects/RealEstate__c/fields/CarName__c.field-meta.xml
<CustomField>
    <fullName>CarName__c</fullName>
    <label>車名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>