force-app/main/default/objects/RealEstate__c/fields/ChangeNum1__c.field-meta.xml
<CustomField>
    <fullName>ChangeNum1__c</fullName>
    <label>入替数値１</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>