force-app/main/default/objects/RealEstate__c/fields/ChangeRealEstateMemo__c.field-meta.xml
<CustomField>
    <fullName>ChangeRealEstateMemo__c</fullName>
    <label>入替物件メモ</label>
    <type>TextArea</type>
</CustomField>