force-app/main/default/objects/RealEstate__c/fields/ChangeStandard1__c.field-meta.xml
<CustomField>
    <fullName>ChangeStandard1__c</fullName>
    <label>入替基準１</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>契約書</fullName>
            </value>
            <value>
                <fullName>重要事項説明書</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>