force-app/main/default/objects/RealEstate__c/fields/ChangeTerms__c.field-meta.xml
<CustomField>
    <fullName>ChangeTerms__c</fullName>
    <label>入替条件</label>
    <length>255</length>
    <type>Text</type>
</CustomField>