force-app/main/default/objects/RealEstate__c/fields/ChangeUnit1__c.field-meta.xml
<CustomField>
    <fullName>ChangeUnit1__c</fullName>
    <label>入替単位１</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>円</fullName>
            </value>
            <value>
                <fullName>百円</fullName>
            </value>
            <value>
                <fullName>千円</fullName>
            </value>
            <value>
                <fullName>万円</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>