force-app/main/default/objects/RealEstate__c/fields/CompanyContractMoneyTransferDueDate__c.field-meta.xml
<CustomField>
    <fullName>CompanyContractMoneyTransferDueDate__c</fullName>
    <label>企業：契約金振込期日(日)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>