force-app/main/default/objects/RealEstate__c/fields/Consignment2__c.field-meta.xml
<CustomField>
    <fullName>Consignment2__c</fullName>
    <label>業務委託料2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>