force-app/main/default/objects/RealEstate__c/fields/ContractorId__c.field-meta.xml
<CustomField>
    <fullName>ContractorId__c</fullName>
    <formula>&quot;123456789&quot;</formula>
    <label>契約者ID</label>
    <type>Text</type>
</CustomField>