force-app/main/default/objects/RealEstate__c/fields/ContractorName__c.field-meta.xml
<CustomField>
    <fullName>ContractorName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>入居者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>物件</relationshipLabel>
    <relationshipName>RealEstateContactRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>