force-app/main/default/objects/RealEstate__c/fields/ContractStorageDate__c.field-meta.xml
<CustomField>
    <fullName>ContractStorageDate__c</fullName>
    <label>契約書保管日</label>
    <type>Date</type>
</CustomField>