force-app/main/default/objects/RealEstate__c/fields/CorporateHousingCategory__c.field-meta.xml
<CustomField>
    <fullName>CorporateHousingCategory__c</fullName>
    <label>社宅区分（個社別）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>