force-app/main/default/objects/RealEstate__c/fields/CorporateHousingMovePeriod1__c.field-meta.xml
<CustomField>
    <fullName>CorporateHousingMovePeriod1__c</fullName>
    <label>社宅入居期限1</label>
    <type>Date</type>
</CustomField>