force-app/main/default/objects/RealEstate__c/fields/CorporateHousingMovePeriodOther1__c.field-meta.xml
<CustomField>
    <fullName>CorporateHousingMovePeriodOther1__c</fullName>
    <label>社宅入居期限その他1</label>
    <type>Date</type>
</CustomField>