force-app/main/default/objects/RealEstate__c/fields/CorporateHousingType__c.field-meta.xml
<CustomField>
    <fullName>CorporateHousingType__c</fullName>
    <label>社宅区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CorporateHousingType</valueSetName>
    </valueSet>
</CustomField>