force-app/main/default/objects/RealEstate__c/fields/DepositDepreciationAttribute__c.field-meta.xml
<CustomField>
    <fullName>DepositDepreciationAttribute__c</fullName>
    <label>（不要）敷金償却_属性</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>