force-app/main/default/objects/RealEstate__c/fields/DepositDepreciationTransferAmount__c.field-meta.xml
<CustomField>
    <fullName>DepositDepreciationTransferAmount__c</fullName>
    <label>（不要）敷金償却振替額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>