force-app/main/default/objects/RealEstate__c/fields/DepositHeadQuarter__c.field-meta.xml
<CustomField>
    <fullName>DepositHeadQuarter__c</fullName>
    <label>預入先本社</label>
    <length>255</length>
    <type>Text</type>
</CustomField>