force-app/main/default/objects/RealEstate__c/fields/DepositHeadQuarterReceiptStaff__c.field-meta.xml
<CustomField>
    <fullName>DepositHeadQuarterReceiptStaff__c</fullName>
    <label>預入本社受領担当者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>