force-app/main/default/objects/RealEstate__c/fields/DestinationStaffName__c.field-meta.xml
<CustomField>
    <fullName>DestinationStaffName__c</fullName>
    <label>相手先担当者名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>