force-app/main/default/objects/RealEstate__c/fields/Disaster__c.field-meta.xml
<CustomField>
    <fullName>Disaster__c</fullName>
    <defaultValue>false</defaultValue>
    <label>被災</label>
    <type>Checkbox</type>
</CustomField>