force-app/main/default/objects/RealEstate__c/fields/DisasterAreaRealEstateIsDetail__c.field-meta.xml
<CustomField>
    <fullName>DisasterAreaRealEstateIsDetail__c</fullName>
    <label>被災地物件フラグ詳細</label>
    <length>255</length>
    <type>Text</type>
</CustomField>