force-app/main/default/objects/RealEstate__c/fields/DistrictCategory__c.field-meta.xml
<CustomField>
    <fullName>DistrictCategory__c</fullName>
    <label>地区区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>