force-app/main/default/objects/RealEstate__c/fields/EmployeeNumber__c.field-meta.xml
<CustomField>
    <fullName>EmployeeNumber__c</fullName>
    <formula>ContractorName__r.EmployeeNum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>社員番号</label>
    <type>Text</type>
</CustomField>