force-app/main/default/objects/RealEstate__c/fields/EntranceKeyAttribute__c.field-meta.xml
<CustomField>
    <fullName>EntranceKeyAttribute__c</fullName>
    <label>エントランスキーの性質</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>鍵</fullName>
            </value>
            <value>
                <fullName>カードキー</fullName>
            </value>
            <value>
                <fullName>暗証番号</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>