force-app/main/default/objects/RealEstate__c/fields/EntranceKeyIs__c.field-meta.xml
<CustomField>
    <fullName>EntranceKeyIs__c</fullName>
    <label>エントランスキーの有無</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>有り</fullName>
            </value>
            <value>
                <fullName>無し</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>