force-app/main/default/objects/RealEstate__c/fields/FirstYear__c.field-meta.xml
<CustomField>
    <fullName>FirstYear__c</fullName>
    <label>初回年数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>