force-app/main/default/objects/RealEstate__c/fields/FloorPlanSynthesis__c.field-meta.xml
<CustomField>
    <fullName>FloorPlanSynthesis__c</fullName>
    <formula>TEXT(LayoutNum__c)&amp; LayoutType__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>間取り（合成）</label>
    <type>Text</type>
</CustomField>