force-app/main/default/objects/RealEstate__c/fields/ForNumberingChubu__c.field-meta.xml
<CustomField>
    <fullName>ForNumberingChubu__c</fullName>
    <label>採番用_中部</label>
    <length>255</length>
    <type>Text</type>
</CustomField>