force-app/main/default/objects/RealEstate__c/fields/ForNumberingChugoku__c.field-meta.xml
<CustomField>
    <fullName>ForNumberingChugoku__c</fullName>
    <label>採番用_中国</label>
    <length>255</length>
    <type>Text</type>
</CustomField>