force-app/main/default/objects/RealEstate__c/fields/FreeRentContent__c.field-meta.xml
<CustomField>
    <fullName>FreeRentContent__c</fullName>
    <label>フリーレント内容</label>
    <length>255</length>
    <type>Text</type>
</CustomField>