force-app/main/default/objects/RealEstate__c/fields/FreeRentRentOccurrenceDate__c.field-meta.xml
<CustomField>
    <fullName>FreeRentRentOccurrenceDate__c</fullName>
    <label>フリーレント賃料発生日</label>
    <type>Date</type>
</CustomField>