force-app/main/default/objects/RealEstate__c/fields/GarageCertification__c.field-meta.xml
<CustomField>
    <fullName>GarageCertification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>車庫証明</label>
    <referenceTo>GarageCertification__c</referenceTo>
    <relationshipLabel>物件</relationshipLabel>
    <relationshipName>RealEstateGarageCertification</relationshipName>
    <type>Lookup</type>
</CustomField>