force-app/main/default/objects/RealEstate__c/fields/GarageContractTerm__c.field-meta.xml
<CustomField>
    <fullName>GarageContractTerm__c</fullName>
    <label>駐車場契約期間</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>