force-app/main/default/objects/RealEstate__c/fields/GarageJurisdiction__c.field-meta.xml
<CustomField>
    <fullName>GarageJurisdiction__c</fullName>
    <label>【駐車場】管轄</label>
    <length>255</length>
    <type>Text</type>
</CustomField>