force-app/main/default/objects/RealEstate__c/fields/GasCompanyContact__c.field-meta.xml
<CustomField>
    <fullName>GasCompanyContact__c</fullName>
    <label>ガス連絡先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>