force-app/main/default/objects/RealEstate__c/fields/HandoverStatus__c.field-meta.xml
<CustomField>
    <fullName>HandoverStatus__c</fullName>
    <label>引渡状態</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>クリーニング済み</fullName>
            </value>
            <value>
                <fullName>クリーニング未対応</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>