force-app/main/default/objects/RealEstate__c/fields/InputCategory__c.field-meta.xml
<CustomField>
    <fullName>InputCategory__c</fullName>
    <label>入力区分</label>
    <type>DateTime</type>
</CustomField>