force-app/main/default/objects/RealEstate__c/fields/InsuranceAgencyName__c.field-meta.xml
<CustomField>
    <fullName>InsuranceAgencyName__c</fullName>
    <label>保険代理店名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>