force-app/main/default/objects/RealEstate__c/fields/InsuranceCompanyContract__c.field-meta.xml
<CustomField>
    <fullName>InsuranceCompanyContract__c</fullName>
    <label>保険会社契約</label>
    <length>255</length>
    <type>Text</type>
</CustomField>