force-app/main/default/objects/RealEstate__c/fields/InsuranceJoinUnnecessaryReasonDormitory__c.field-meta.xml
<CustomField>
    <fullName>InsuranceJoinUnnecessaryReasonDormitory__c</fullName>
    <label>保険加入不要理由（寮）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>