force-app/main/default/objects/RealEstate__c/fields/InsuranceNote__c.field-meta.xml
<CustomField>
    <fullName>InsuranceNote__c</fullName>
    <label>保険備考</label>
    <type>TextArea</type>
</CustomField>