force-app/main/default/objects/RealEstate__c/fields/InsuranceStructureNo__c.field-meta.xml
<CustomField>
    <fullName>InsuranceStructureNo__c</fullName>
    <label>保険構造No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>