force-app/main/default/objects/RealEstate__c/fields/InsuranceType__c.field-meta.xml
<CustomField>
    <fullName>InsuranceType__c</fullName>
    <label>保険タイプ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>火災保険</fullName>
            </value>
            <value>
                <fullName>地震保険</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>