force-app/main/default/objects/RealEstate__c/fields/IsAutoRenewal__c.field-meta.xml
<CustomField>
    <fullName>IsAutoRenewal__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>自動更新</label>
    <type>Text</type>
</CustomField>