force-app/main/default/objects/RealEstate__c/fields/IsBasicCreated__c.field-meta.xml
<CustomField>
    <fullName>IsBasicCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ベーシック作成済フラグ</label>
    <type>Checkbox</type>
</CustomField>