force-app/main/default/objects/RealEstate__c/fields/IsChange__c.field-meta.xml
<CustomField>
    <fullName>IsChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>入替専用</label>
    <type>Checkbox</type>
</CustomField>