force-app/main/default/objects/RealEstate__c/fields/IsDataManagement__c.field-meta.xml
<CustomField>
    <fullName>IsDataManagement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>データ管理のみ</label>
    <type>Checkbox</type>
</CustomField>