force-app/main/default/objects/RealEstate__c/fields/IsEmpty__c.field-meta.xml
<CustomField>
    <fullName>IsEmpty__c</fullName>
    <formula>IF( OR ( ISNULL(ContractorName__c ) = TRUE ,  ContractorName__c =   ContractorName__r.Account.EmptyStaff__c  ) , TRUE , FALSE)</formula>
    <label>空室</label>
    <type>Checkbox</type>
</CustomField>