force-app/main/default/objects/RealEstate__c/fields/IsFreeRent__c.field-meta.xml
<CustomField>
    <fullName>IsFreeRent__c</fullName>
    <label>フリーレント有無</label>
    <length>255</length>
    <type>Text</type>
</CustomField>