force-app/main/default/objects/RealEstate__c/fields/IsLayer__c.field-meta.xml
<CustomField>
    <fullName>IsLayer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>親子物件</label>
    <type>Checkbox</type>
</CustomField>