force-app/main/default/objects/RealEstate__c/fields/IsLeaveApplication__c.field-meta.xml
<CustomField>
    <fullName>IsLeaveApplication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>退去申請あり</label>
    <type>Checkbox</type>
</CustomField>