force-app/main/default/objects/RealEstate__c/fields/IsMyNumberLinkStopRealEstate314__c.field-meta.xml
<CustomField>
    <fullName>IsMyNumberLinkStopRealEstate314__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MN連携停止物件フラグ314</label>
    <type>Checkbox</type>
</CustomField>