force-app/main/default/objects/RealEstate__c/fields/IsMyNumberLinkStopRealEstate__c.field-meta.xml
<CustomField>
    <fullName>IsMyNumberLinkStopRealEstate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MN連携停止物件フラグ</label>
    <type>Checkbox</type>
</CustomField>