force-app/main/default/objects/RealEstate__c/fields/IsNonAutomaticUpdate__c.field-meta.xml
<CustomField>
    <fullName>IsNonAutomaticUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動更新不可フラグ</label>
    <type>Checkbox</type>
</CustomField>