force-app/main/default/objects/RealEstate__c/fields/IsPet__c.field-meta.xml
<CustomField>
    <fullName>IsPet__c</fullName>
    <label>ペット有無</label>
    <length>255</length>
    <type>Text</type>
</CustomField>