force-app/main/default/objects/RealEstate__c/fields/IsRealEstateRecordCreateDate__c.field-meta.xml
<CustomField>
    <fullName>IsRealEstateRecordCreateDate__c</fullName>
    <formula>TODAY() &gt;=  RenewalRecordCreateDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>更新レコード作成日フラグ</label>
    <type>Checkbox</type>
</CustomField>