force-app/main/default/objects/RealEstate__c/fields/IsRefrigerator__c.field-meta.xml
<CustomField>
    <fullName>IsRefrigerator__c</fullName>
    <label>冷蔵庫有無</label>
    <length>255</length>
    <type>Text</type>
</CustomField>