force-app/main/default/objects/RealEstate__c/fields/IsRemittance__c.field-meta.xml
<CustomField>
    <fullName>IsRemittance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>送金駐車場</label>
    <type>Checkbox</type>
</CustomField>