force-app/main/default/objects/RealEstate__c/fields/IsRenewalCancelAutoSendNG__c.field-meta.xml
<CustomField>
    <fullName>IsRenewalCancelAutoSendNG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>更新解約自動送付NGフラグ</label>
    <type>Checkbox</type>
</CustomField>