force-app/main/default/objects/RealEstate__c/fields/IsRenewalNoticeWaiting__c.field-meta.xml
<CustomField>
    <fullName>IsRenewalNoticeWaiting__c</fullName>
    <defaultValue>true</defaultValue>
    <label>更新通知待ちフラグ</label>
    <type>Checkbox</type>
</CustomField>