force-app/main/default/objects/RealEstate__c/fields/IsRenewalTermsConfirmationSendNG__c.field-meta.xml
<CustomField>
    <fullName>IsRenewalTermsConfirmationSendNG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>（不要）更新条件確認書送付NGフラグ</label>
    <type>Checkbox</type>
</CustomField>