force-app/main/default/objects/RealEstate__c/fields/IsTaxTarget__c.field-meta.xml
<CustomField>
    <fullName>IsTaxTarget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>shz_対象フラグ</label>
    <type>Checkbox</type>
</CustomField>