force-app/main/default/objects/RealEstate__c/fields/IsUnmanaged__c.field-meta.xml
<CustomField>
    <fullName>IsUnmanaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>管理外</label>
    <type>Checkbox</type>
</CustomField>