force-app/main/default/objects/RealEstate__c/fields/IsWarmWaterWashingToiletSeat__c.field-meta.xml
<CustomField>
    <fullName>IsWarmWaterWashingToiletSeat__c</fullName>
    <label>温水洗浄便座有無</label>
    <length>255</length>
    <type>Text</type>
</CustomField>