force-app/main/default/objects/RealEstate__c/fields/IsWashingMachine__c.field-meta.xml
<CustomField>
    <fullName>IsWashingMachine__c</fullName>
    <label>洗濯機有無</label>
    <length>255</length>
    <type>Text</type>
</CustomField>