force-app/main/default/objects/RealEstate__c/fields/Kana__c.field-meta.xml
<CustomField>
    <fullName>Kana__c</fullName>
    <label>物件名フリガナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>