force-app/main/default/objects/RealEstate__c/fields/LastPayChangeApproval__c.field-meta.xml
<CustomField>
    <fullName>LastPayChangeApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>最終負担変更承認</label>
    <type>Checkbox</type>
</CustomField>