force-app/main/default/objects/RealEstate__c/fields/LaterYear__c.field-meta.xml
<CustomField>
    <fullName>LaterYear__c</fullName>
    <label>以降年数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>