force-app/main/default/objects/RealEstate__c/fields/LayoutType__c.field-meta.xml
<CustomField>
    <fullName>LayoutType__c</fullName>
    <label>間取り_タイプ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>