force-app/main/default/objects/RealEstate__c/fields/ListViewEmployee__c.field-meta.xml
<CustomField>
    <fullName>ListViewEmployee__c</fullName>
    <formula>$User.ContactId =  ContractorName__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>リストビュー_企業社員</label>
    <type>Checkbox</type>
</CustomField>