force-app/main/default/objects/RealEstate__c/fields/ManagementCategory__c.field-meta.xml
<CustomField>
    <fullName>ManagementCategory__c</fullName>
    <label>管理区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>