force-app/main/default/objects/RealEstate__c/fields/ManagementCompanyAdress__c.field-meta.xml
<CustomField>
    <fullName>ManagementCompanyAdress__c</fullName>
    <formula>ManagementCompanyName__r.BillingState +  ManagementCompanyName__r.BillingCity +  ManagementCompanyName__r.BillingStreet</formula>
    <label>管理会社_住所</label>
    <type>Text</type>
</CustomField>