force-app/main/default/objects/RealEstate__c/fields/ManagementFields2__c.field-meta.xml
<CustomField>
    <fullName>ManagementFields2__c</fullName>
    <label>管理項目2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>