force-app/main/default/objects/RealEstate__c/fields/ManagementTransferReSendingDate__c.field-meta.xml
<CustomField>
    <fullName>ManagementTransferReSendingDate__c</fullName>
    <label>管理移管通知再発送日</label>
    <type>Date</type>
</CustomField>