force-app/main/default/objects/RealEstate__c/fields/ManagementTransferReturnDate__c.field-meta.xml
<CustomField>
    <fullName>ManagementTransferReturnDate__c</fullName>
    <label>管理移管通知返送日</label>
    <type>Date</type>
</CustomField>