force-app/main/default/objects/RealEstate__c/fields/ManagementUseNote__c.field-meta.xml
<CustomField>
    <fullName>ManagementUseNote__c</fullName>
    <label>管理用備考</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>