force-app/main/default/objects/RealEstate__c/fields/MoveInDate__c.field-meta.xml
<CustomField>
    <fullName>MoveInDate__c</fullName>
    <label>現入居者入居日</label>
    <type>Date</type>
</CustomField>