force-app/main/default/objects/RealEstate__c/fields/MoveNumOfPeople__c.field-meta.xml
<CustomField>
    <fullName>MoveNumOfPeople__c</fullName>
    <label>入居人数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>