force-app/main/default/objects/RealEstate__c/fields/MovePossibleDate__c.field-meta.xml
<CustomField>
    <fullName>MovePossibleDate__c</fullName>
    <label>入居可能日</label>
    <type>Date</type>
</CustomField>