force-app/main/default/objects/RealEstate__c/fields/MoveReasonOtherDetail__c.field-meta.xml
<CustomField>
    <fullName>MoveReasonOtherDetail__c</fullName>
    <label>入居理由（その他詳細）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>