force-app/main/default/objects/RealEstate__c/fields/MyNumberAcquisitionResponderCategory313__c.field-meta.xml
<CustomField>
    <fullName>MyNumberAcquisitionResponderCategory313__c</fullName>
    <label>MN取得対応者区分313</label>
    <length>255</length>
    <type>Text</type>
</CustomField>