force-app/main/default/objects/RealEstate__c/fields/MyNumberAcquisitionTargetDecision313__c.field-meta.xml
<CustomField>
    <fullName>MyNumberAcquisitionTargetDecision313__c</fullName>
    <label>MN取得対象判定313</label>
    <length>255</length>
    <type>Text</type>
</CustomField>