force-app/main/default/objects/RealEstate__c/fields/MyNumberAcquisitionTargetDecision314__c.field-meta.xml
<CustomField>
    <fullName>MyNumberAcquisitionTargetDecision314__c</fullName>
    <label>MN取得対象判定314</label>
    <length>255</length>
    <type>Text</type>
</CustomField>