force-app/main/default/objects/RealEstate__c/fields/MyNumberForcedLinkRecordNote__c.field-meta.xml
<CustomField>
    <fullName>MyNumberForcedLinkRecordNote__c</fullName>
    <label>MN強制連携レコード備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>