force-app/main/default/objects/RealEstate__c/fields/MyNumberRealEstateInfoNote314__c.field-meta.xml
<CustomField>
    <fullName>MyNumberRealEstateInfoNote314__c</fullName>
    <label>MN物件情報備考314</label>
    <length>255</length>
    <type>Text</type>
</CustomField>