force-app/main/default/objects/RealEstate__c/fields/MyNumberRealEstateInfoNote__c.field-meta.xml
<CustomField>
    <fullName>MyNumberRealEstateInfoNote__c</fullName>
    <label>MN物件情報備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>