force-app/main/default/objects/RealEstate__c/fields/NotificationMovingOutSubmitScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>NotificationMovingOutSubmitScheduledDate__c</fullName>
    <label>退去届提出予定日</label>
    <type>Date</type>
</CustomField>