force-app/main/default/objects/RealEstate__c/fields/NotificationMovingOutSubmitStatus__c.field-meta.xml
<CustomField>
    <fullName>NotificationMovingOutSubmitStatus__c</fullName>
    <label>退去届提出状況</label>
    <length>255</length>
    <type>Text</type>
</CustomField>