force-app/main/default/objects/RealEstate__c/fields/NumberOfSheets__c.field-meta.xml
<CustomField>
    <fullName>NumberOfSheets__c</fullName>
    <label>帖数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>