force-app/main/default/objects/RealEstate__c/fields/OnFootTimeFromNearestStation__c.field-meta.xml
<CustomField>
    <fullName>OnFootTimeFromNearestStation__c</fullName>
    <label>最寄り駅からの徒歩時間</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>