force-app/main/default/objects/RealEstate__c/fields/Other2ExpenseItems__c.field-meta.xml
<CustomField>
    <fullName>Other2ExpenseItems__c</fullName>
    <label>その他２費目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>