force-app/main/default/objects/RealEstate__c/fields/Other3ExpenseItems__c.field-meta.xml
<CustomField>
    <fullName>Other3ExpenseItems__c</fullName>
    <label>その他３費目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>