force-app/main/default/objects/RealEstate__c/fields/Other4Amount__c.field-meta.xml
<CustomField>
    <fullName>Other4Amount__c</fullName>
    <label>その他４金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>