force-app/main/default/objects/RealEstate__c/fields/Other4ExpenseItems__c.field-meta.xml
<CustomField>
    <fullName>Other4ExpenseItems__c</fullName>
    <label>その他４費目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>