force-app/main/default/objects/RealEstate__c/fields/Other5Amount__c.field-meta.xml
<CustomField>
    <fullName>Other5Amount__c</fullName>
    <label>その他５金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>