force-app/main/default/objects/RealEstate__c/fields/OtherManagementNo11__c.field-meta.xml
<CustomField>
    <fullName>OtherManagementNo11__c</fullName>
    <label>その他管理NO11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>