force-app/main/default/objects/RealEstate__c/fields/OtherManagementNo8__c.field-meta.xml
<CustomField>
    <fullName>OtherManagementNo8__c</fullName>
    <label>その他管理NO8</label>
    <length>255</length>
    <type>Text</type>
</CustomField>