force-app/main/default/objects/RealEstate__c/fields/OwnerTransferReSendingDate__c.field-meta.xml
<CustomField>
    <fullName>OwnerTransferReSendingDate__c</fullName>
    <label>家主移管通知再発送日</label>
    <type>Date</type>
</CustomField>