force-app/main/default/objects/RealEstate__c/fields/ParkingFee__c.field-meta.xml
<CustomField>
    <fullName>ParkingFee__c</fullName>
    <label>駐車場代</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>