force-app/main/default/objects/RealEstate__c/fields/PaymentMonth__c.field-meta.xml
<CustomField>
    <fullName>PaymentMonth__c</fullName>
    <label>支払月</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>