force-app/main/default/objects/RealEstate__c/fields/Penalty1EndDate__c.field-meta.xml
<CustomField>
    <fullName>Penalty1EndDate__c</fullName>
    <label>違約金1_期間終わり</label>
    <type>Date</type>
</CustomField>