force-app/main/default/objects/RealEstate__c/fields/Penalty1StartDate__c.field-meta.xml
<CustomField>
    <fullName>Penalty1StartDate__c</fullName>
    <label>違約金1_期間始まり</label>
    <type>Date</type>
</CustomField>