force-app/main/default/objects/RealEstate__c/fields/Penalty2Cost__c.field-meta.xml
<CustomField>
    <fullName>Penalty2Cost__c</fullName>
    <label>違約金2_費用</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>