force-app/main/default/objects/RealEstate__c/fields/Penalty2EndDate__c.field-meta.xml
<CustomField>
    <fullName>Penalty2EndDate__c</fullName>
    <label>違約金2_期間終わり</label>
    <type>Date</type>
</CustomField>